DIAM-971: Updated Controller to throw exception if user has related entites and therefore can not be removed

--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -42,6 +42,9 @@ diamante:
         reset_pwd:
           query:        Are you sure you want to reset password for this customer?
           success:      User password successfully reset.
+        remove:
+          failed:
+            related:    Error deleting user. User has related entities.
 
       placeholder:
         email:          'Please enter an email address'
