DIAM-1423: Changed form placeholder

--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -235,6 +235,7 @@ diamante:
           edit:                Edit
           add:                 Add
           change:              Change
+          select_watcher:      Select User
 
         common:
           general:             General
