DIAM-1459 add labels for workflow and business rules

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -19,7 +19,10 @@ diamante:
           activate: Activate Rules
           deactivate: Deactivate Rules
       business:
+        entity_label: Business Rules
         repetition_time: Repetition Interval
+      workflow:
+        entity_label: Workflow Rules
     ui:
       create:              Create
       ok:                  Ok
