--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -18,6 +18,11 @@ diamante:
           remove: Remove Rules
           activate: Activate Rules
           deactivate: Deactivate Rules
+          response:
+            activate:
+              success_message: "{0} No entities were activated|{1} One entity was activated|]1,Inf[ %count% entities were activated"
+            deactivate:
+              success_message: "{0} No entities were deactivated|{1} One entity was deactivated|]1,Inf[ %count% entities were deactivated"
       business:
         entity_label: Business Rules
         repetition_time: Repetition Interval
