--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -35,7 +35,9 @@ diamante:
             delete:
               query:           WARNING! Are you sure you want to delete this branch with ALL tickets assigned to it?
               success:         Branch successfully deleted.
+              mass_success:    "{1} One branch was deleted.|]1,Inf[ %count% branches were deleted."
               error:           Current branch is configured as default for Email Processing and cannot be deleted.
+              mass_error:      "{0} Current branch is configured as a default for Email Processing and can't be deleted.|{1} One branch was deleted except default branch|]1,Inf[ %count% branches were deleted except default branch"
               exist_tickets_error: One or more branches have tickets and cannot be deleted.
               move:            Keep the tickets and move them to another branch.
               select:          Select a new branch
