DIAM-1513 add reporter email label

--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -57,7 +57,7 @@ diamante:
           description.label:          Description
           id.label:                   Ticket Id
           priority.label:             Priority
-          reporter.label:             Reporter
+          reporter_email.label:       Reporter Email
           assignee.label:             Assigner
           branch.label:               Branch
           comments.label:             Comments
