--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -64,15 +64,25 @@ diamante:
       name:                Name
 
     condition:
-      eq:       is equal to
-      neq:      is not equal to
-      gt:       is greater than
-      gte:      is greater than or equals to
-      lt:       is less than
-      lte:      is less than or equals to
-      in:       is one of the following
-      in_range: is in range
-      contains: contains
+      eq:           is equal to
+      neq:          is not equal to
+      gt:           is greater than
+      gte:          is greater than or equals to
+      lt:           is less than
+      lte:          is less than or equals to
+      in:           is one of the following
+      in_range:     is in range
+      contains:     contains
+      created:      created
+      updated:      updated
+      removed:      removed
+      changed:      changed
+      changed_from: changed from
+      changed_to:   changed to
+      "true":       "true"
+      "false":      "false"
+      customer:     is customer
+      admin:        is admin
 
     action:
       update_property: update property
