--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -8,6 +8,9 @@ diamante:
         create:
           error:           Error occurred when creating the rule. Rule is not created. Enter all required data and try again.
           success:         Rule successfully created.
+        delete:
+          query:        Are you sure you want to delete this rule?
+          success:      Rule successfully deleted.
 
       actions:
         add: Add Rule
