DIAM-1536 change rule delete and edit titles

--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -18,7 +18,7 @@ diamante:
         add: Add Rule
         view: View Rule
         edit: Edit Rule
-        remove: Remove Rule
+        delete: Delete Rule
         mass:
           remove: Remove Rules
           activate: Activate Rules
