DIAM-1533 change create button name

--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -46,6 +46,11 @@ diamante:
       edit:                Edit
       add:                 Add
       change:              Change
+      workflow:
+        create:              Create Workflow Rule
+      business:
+        create:              Create Business Rule
+
 
     attributes:
       condition:           Condition
