DIAM-1549 fix translations

--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -117,5 +117,6 @@ diamante:
         removed: Comment was removed
 
     cron:
+      d: "{1} every day|]1,Inf[ every %time% days"
       h: "{1} every hour|]1,Inf[ every %time% hours"
       m: every %time% minutes
