DIAM-1626 implement container and prototype rule actions

--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -62,3 +62,10 @@ diamante:
 
       exception:
         customer_exists:    Customer with such email already exists.
+
+      autocomplete:
+        group:
+          assignee:       '[Assignee]'
+          watchers:       '[Watchers]'
+          reporter:       '[Reporter]'
+          comment_author: '[Comment author]'
