--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -58,7 +58,7 @@ diamante:
       weight:              Weight
       target:              Target
       parent:              Parent
-      active:              Active
+      active:              Status
       expression:          Expression
       mode:                Mode
 
