DIAM-1671 add private prefix for comment

--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -117,6 +117,10 @@ diamante:
         created: Comment was created
         updated: Comment was updated
         removed: Comment was removed
+        private:
+          created: Private comment was created
+          updated: Private comment was updated
+          removed: Private comment was removed
 
     cron:
       d: "{1} Every day|]1,Inf[ Every %time% days"
