DIAM-1572 fix status dropdown

--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -62,7 +62,7 @@ diamante:
       weight:              Weight
       target:              Target
       parent:              Parent
-      active:              Status
+      status:              Status
       expression:          Expression
       mode:                Mode
 
