Moved templates to appropriate paths

--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -323,6 +323,20 @@ diamante:
         automation:
           action:
             move_to_branch:    Move to branch
+
+          notification:
+            ticket:
+              removed:
+            comment:
+              created:
+              updated: Comment was updated
+              removed: Comment was removed
+            private:
+              created: Private comment was created
+              updated: Private comment was updated
+              removed: Private comment was removed
+
+
 oro:
     entity_extend:
         form:
