--- a/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/AutomationBundle/Resources/translations/messages.en.yml
@@ -37,7 +37,7 @@ diamante:
               success_message: "{0} No entities were deactivated|{1} One entity was deactivated|]1,Inf[ %count% entities were deactivated"
       business:
         entity_label: Business Rules
-        repetition_time: Repetition Interval
+        repetition_time: Frequency
       workflow:
         entity_label: Workflow Rules
     ui:
