--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
@@ -1,13 +1,27 @@
 "Loading...": "Загрузка..."
 
 diamante_front:
-  header:
+  common:
     template:
-      new_ticket: Новый Тикет
+      close: Close
+      cancel: Cancel
+      sort: Sort By
+
+    view:
+      alert:
+        title: Error
+        text: An unprocessed error happened. Please try again!
+      model:
+        title: 'Modal Window'
+        submit: 'Save changes'
 
   footer:
     template:
       copyright: Diamante выпущена под лицензией %{license} команией %{company}
+
+  header:
+    template:
+      new_ticket: Новый Тикет
 
   session:
     controller:
