--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.en.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.en.yml
@@ -15,6 +15,35 @@ diamante_front:
         title: Modal Window
         submit: Save changes
 
+  attachment:
+      controller:
+        alert:
+          delete_error:
+            title: Delete Attachment Error
+        message:
+           attach_success: Files attached successfully
+           delete_success: File deleted successfully
+
+      model:
+        alert:
+          add_error:
+            title: Add Attachments Error
+
+      template:
+        dropzone:
+          dropfiles: Drop files here to attach
+          attachfiles: Click here to attach files
+          read: Reading...
+          send: Sending...
+          receive: Receiving...
+        button:
+          remove: Remove Attachment
+        link:
+          download: Download:
+        header:
+          file: File Attachments
+
+
   footer:
     template:
       copyright: Diamante is released under %{license} License by %{company}
