--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
@@ -1,6 +1,34 @@
 "Loading...": "Загрузка..."
 
 diamante_front:
+  attachment:
+    controller:
+      alert:
+        delete_error:
+          title: Delete Attachment Error
+      message:
+         attach_success: Files attached successfully
+         delete_success: File deleted successfully
+
+    model:
+      alert:
+        add_error:
+          title: Add Attachments Error
+
+    template:
+      dropzone:
+        dropfiles: Drop files here to attach
+        attachfiles: Click here to attach files
+        read: Reading...
+        send: Sending...
+        receive: Receiving...
+      button:
+        remove: Remove Attachment
+      link:
+        download: Download:
+      header:
+        file: File Attachments
+
   common:
     template:
       close: Close
@@ -12,8 +40,8 @@ diamante_front:
         title: Error
         text: An unprocessed error happened. Please try again!
       model:
-        title: 'Modal Window'
-        submit: 'Save changes'
+        title: Modal Window
+        submit: Save changes
 
   footer:
     template:
@@ -86,3 +114,8 @@ diamante_front:
         register: Continue
         reset_password: Reset Password
         new_password: Set New Password
+
+    title:
+      login: Login
+      register: Registration
+      reset: Reset Password
