[DIAM-1824] Translate Ticket module in assets folder

--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.en.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.en.yml
@@ -187,6 +187,8 @@ diamante_front:
         subject: Subject
         priority: Priority
         status: Status
+      resolve_button: Resolve Ticket
+      reopen_button: Reopen Ticket
 
     view:
       all_tickets: View all tickets
